新手机端页面

--- a/weapp/mall/templates/mall/webapp/promotion/m_card_exchange.html
+++ b/weapp/mall/templates/mall/webapp/promotion/m_card_exchange.html
@@ -8,7 +8,13 @@
 </style>
 {% endblock %}
 {% block content-panel %}
+<div data-role="page" data-theme="x" class="xui-wzcoinConfirm-page">
+	<div data-role="content" data-theme="x">
+		<div class="xui-section-item">
 
+		</div>
+	</div>
+</div>
 {% endblock %}
 
 {% block js %}
