--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -92,7 +92,9 @@
 		<tbody id='product_list'>
             {{if items.length}}
 	            {{each(i, product) items}}
-				<tr data-id="${product.id}" class="xa-selectTr">
+				<tr data-id="${product.id}" 
+					{{if !product.is_group_buying }}class="xa-selectTr"{{/if}}
+					data-is-group-buying="${product.is_group_buying}">
 					<td class="wui-advanced-table-sort-handler tl_important">
 						<div class="disT w">
 							<div class="imgBox disTc pr xui-imgBox">
