--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -286,6 +286,26 @@ $(document).ready(function() {
 		});
 	});
 
+	$('body').delegate('.xa-start', 'click', function(event) {
+		var $el = $(event.target);
+		var id = $el.data('id');
+		W.getApi().call({
+			app: 'apps/group',
+			resource: 'group_status',
+			method: 'post',
+			args: {
+				id: id,
+				target: 'running' //进行中
+			},
+			success: function(data) {
+				W.showHint('success', '开启活动成功！');
+				table.reload();
+			},
+			error: function(response) {
+				W.showHint('error', '更新状态失败，请稍后再试！');
+			}
+		});
+	});
 	$('body').delegate('.xa-close', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
@@ -295,10 +315,10 @@ $(document).ready(function() {
 			method: 'post',
 			args: {
 				id: id,
-				target: 'stoped'
+				target: 'stoped' //结束
 			},
 			success: function(data) {
-				W.showHint('success', '更新状态成功！');
+				W.showHint('success', '关闭活动成功！');
 				table.reload();
 			},
 			error: function(response) {
