--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -22,5 +22,6 @@
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="shengjingCustom">盛景定制APP</a></li>
     {{/if}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="sign">签到</a></li>
+    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="cardExchange">微众卡兑换</a></li>
 </ul>
 </script>
